--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
-  firebase.auth();
+  const auth = firebase.auth();
 </script>
 
 
