--- a/users.html
+++ b/users.html
@@ -178,7 +178,7 @@
           <img src="img/bgs.svg">
       </div>
       <div class="login-content">
-          <form>
+          <form text-algin="center">
              
               
 
